# Visual_Annotation_MCP

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
docs/: OPERATIONS.md  RELEASE_NOTES_AND_MIGRATION.md  SPRINT_EXECUTION_PLAN.md
docs/sprints/: ACCEPTANCE_MATRIX.md  BACKLOG.md  FLOW_V2_CONTRACT.md  RISKS_AND_GATES.md  SPRINT6_CLOSEOUT.md  SWARM_NOTES.md
scripts/: run_visual_mcp.ps1  run_visual_mcp.sh
tests/: smoke_test.py  test_arrow_label_placement.py  test_contrast.py  test_flow_contracts.py  test_flow_executor.py  test_observability.py  test_security.py
visual_annotation_mcp/: __init__.py  __main__.py  annotate.py  browser_session.py  errors.py  flow_contracts.py  flow_executor.py  install.py  observability.py  security.py  server.py
