[project]
name = "visual-annotation-mcp"
version = "0.1.0"
description = "MCP server: open pages, inspect elements, screenshot, and highlight regions"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "playwright>=1.40.0",
    "pillow>=10.0.0",
]

[project.scripts]
visual-annotation-mcp = "visual_annotation_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["visual_annotation_mcp"]
