[project]
name = "visual-annotation-mcp"
dynamic = ["version"]
description = "MCP server: navigate, inspect elements, screenshot, and annotate web pages with smart color contrast and background blur."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Michael Stocker", email = "mstockerjr@outlook.com" },
]
keywords = [
  "mcp",
  "model-context-protocol",
  "playwright",
  "screenshot",
  "annotation",
  "highlight",
  "claude",
  "anthropic",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
  "Topic :: Multimedia :: Graphics",
]
dependencies = [
  "mcp>=1.2.0,<2",
  "playwright>=1.40.0,<2",
  "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.6.0",
  "mypy>=1.11.0",
  "pip-audit>=2.8.0",
  "pydocstyle>=6.3.0",
  "ruff>=0.6.0",
]

[project.scripts]
visual-annotation-mcp = "visual_annotation_mcp.server:main"
visual-annotation-mcp-install-browsers = "visual_annotation_mcp.install:main"

[project.urls]
Homepage      = "https://github.com/mstocker1/Visual_Annotation_MCP"
Repository    = "https://github.com/mstocker1/Visual_Annotation_MCP"
Issues        = "https://github.com/mstocker1/Visual_Annotation_MCP/issues"
Changelog     = "https://github.com/mstocker1/Visual_Annotation_MCP/releases"

[build-system]
requires = ["hatchling>=1.21", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

# Dynamic version from git tags. `git tag v0.2.0 && git push --tags` becomes
# version 0.2.0 at build time. Between tags you get a dev/local version
# string like `0.2.0.dev3+g1a2b3c4`.
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "visual_annotation_mcp/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["visual_annotation_mcp"]

[tool.hatch.build.targets.sdist]
include = [
  "/visual_annotation_mcp",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
]

[tool.coverage.run]
source = ["visual_annotation_mcp"]
branch = true
omit = [
  "visual_annotation_mcp/__main__.py",
  "visual_annotation_mcp/annotate.py",
  "visual_annotation_mcp/browser_session.py",
  "visual_annotation_mcp/install.py",
  "visual_annotation_mcp/server.py",
]

[tool.coverage.report]
fail_under = 55
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "visual_annotation_mcp.annotate",
  "visual_annotation_mcp.browser_session",
  "visual_annotation_mcp.server",
]
ignore_errors = true

[tool.pydocstyle]
convention = "pep257"
# Existing codebase has mixed docstring coverage; enforce quality where present.
add-ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D203", "D205", "D212", "D400"]
